itsm-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production-itsm
  labels:
    app: itsm
